<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="25dp"
    android:id="@+id/itemView">

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:paddingBottom="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName">

            <ImageButton
                android:id="@+id/itemStockDecrementButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/purplePrimary"
                android:contentDescription="@string/decrement_item_stock"
                android:src="@drawable/button_minus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/itemStockValue"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/stock"
                android:inputType="number"
                android:textColorHint="#A1887F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/itemStockIncrementButton"
                app:layout_constraintStart_toEndOf="@+id/itemStockDecrementButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/itemStockIncrementButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/purplePrimary"
                android:contentDescription="@string/increment_item_stock"
                android:src="@drawable/button_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>